xml/src2/objects/Chaplain_Endorsement_Approval__c.object
<CustomObject>
    <description>Chaplain Endorsement/Approval object</description>
    <fields>
        <fullName>Application_Accepted_Date__c</fullName>
        <label>Application Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Denied_Date__c</fullName>
        <label>Application Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_For__c</fullName>
        <inlineHelpText>Select appropriate endorsement/approval type.</inlineHelpText>
        <label>Application For</label>
        <picklist>
            <picklistValues>
                <fullName>Civilian Endorsement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Chaplain Endorsement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Chaplain Candidate Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civilian Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Withdrawn_Date__c</fullName>
        <label>Application Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committee_Decision__c</fullName>
        <inlineHelpText>Select UMEA committee&apos;s decision on candidate&apos;s application</inlineHelpText>
        <label>Committee Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Endorse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ApplicationApprovals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Endorsement_Approval_Date__c</fullName>
        <inlineHelpText>Enter date contact was endorsed/approved for setting</inlineHelpText>
        <label>Endorsement/Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsement_Approval_Withdrawn_Date__c</fullName>
        <inlineHelpText>Enter date that Endorsement/Approval was withdrawn by UMEA</inlineHelpText>
        <label>Endorsement/Approval Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>Setting</label>
        <picklist>
            <controllingField>Application_For__c</controllingField>
            <picklistValues>
                <fullName>Air Force Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children’s Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Air Patrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Pastoral Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement and Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marriage and Family Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastoral Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastoral Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison/Correctional Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison Correctional Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiritual Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transitional Interim Ministry Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIMS_Situation__c</fullName>
        <inlineHelpText>These are only applicable to the Civilian Approval setting Transitional Interim Ministry Specialist</inlineHelpText>
        <label>TIMS Situation</label>
        <picklist>
            <controllingField>Setting__c</controllingField>
            <picklistValues>
                <fullName>Non-Crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Reason_Other_Specify__c</fullName>
        <description>With Drawn Other Specify</description>
        <label>Withdrawn Reason(Other/Specify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Reason__c</fullName>
        <label>Withdrawn Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Chaplain Endorsement/Approval</label>
    <nameField>
        <displayFormat>Chaplain-{00000000}</displayFormat>
        <label>Chaplain Endorsement Approval Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chaplain Endorsement/Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WithDrawn_Reason_OtherSpecify</fullName>
        <active>true</active>
        <description>If the &apos;Wothdrawn Reason&apos; is &apos;Others/Specify&apos; .Then user should enter a value in the &apos;Withdrawn Reason (Other/specify)&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(   Withdrawn_Reason__c    ,&quot;Other/Specify&quot;) , ISBLANK(    Withdrawn_Reason_Other_Specify__c    ) )</errorConditionFormula>
        <errorDisplayField>Withdrawn_Reason_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Withdrawn Reason(Other/Specify)&apos; may contain a value if Withdrawn Reason is &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WithdrawnReason_OtherSpecify_WD_OS</fullName>
        <active>true</active>
        <description>If Withdrawn Reason is not &apos;Other/Specify&apos; then Withdrawn Reason(Other/Specify) Should not contain a value</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL(   Withdrawn_Reason__c   ,&quot;Other/Specify&quot;)) ,NOT( ISBLANK(   Withdrawn_Reason_Other_Specify__c ) ))</errorConditionFormula>
        <errorDisplayField>Withdrawn_Reason_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Withdrawn Reason(Other/Specify)&apos; may not contain a value if Withdrawn Reason is NOT &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
</CustomObject>